# Let-Me-Count

./: .gitignore  .gitmodules  README.md
let-me-count.p4app/: Makefile  letmecount.p4  lmc_header.py  main.py  receive.py  send.py  trailingZeroBits  trailingZeroBits.cpp
let-me-count.p4app/csrc/: CMakeLists.txt  trailingZeroBits  trailingZeroBits.cpp
let-me-count.tofino/bfrt_python/: setup.py
let-me-count.tofino/p4src/: lemecount.p4  letmecount.p4
let-me-count.tofino/p4src/common/: headers.p4  util.p4
let-me-count.tofino/pkt/: lmc_header.py  pktgen.py  recv.py  send.py
